<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:id="@+id/textView1"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvpnombre"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valoracion"
            android:id="@+id/textView2"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvpvaloracion"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrincantes"
            android:id="@+id/textView3"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvpcontrincante"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp" />
    </LinearLayout>


</LinearLayout>